main.tf
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

provider "aws" {
  region = var.region
  access_key = var.access_key
  secret_key = var.secret_key
}

data "aws_availability_zones" "available" {}

locals {
  cluster_name = "education-eks-${random_string.suffix.result}"
}

resource "random_string" "suffix" {
  length  = 8
  special = false
}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "3.19.0"

  name = "education-vpc"

  cidr = "10.0.0.0/16"
  azs  = slice(data.aws_availability_zones.available.names, 0, 3)

  private_subnets = ["10.0.1.0/24", "10.0.2.0/24", "10.0.3.0/24"]
  public_subnets  = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]

  enable_nat_gateway   = true
  single_nat_gateway   = true
  enable_dns_hostnames = true

  public_subnet_tags = {
    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
    "kubernetes.io/role/elb"                      = 1
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/${local.cluster_name}" = "shared"
    "kubernetes.io/role/internal-elb"             = 1
  }
}

module "eks" {
  source  = "terraform-aws-modules/eks/aws"
  version = "19.5.1"

  cluster_name    = local.cluster_name
  cluster_version = "1.24"

  vpc_id                         = module.vpc.vpc_id
  subnet_ids                     = module.vpc.private_subnets
  cluster_endpoint_public_access = true

  eks_managed_node_group_defaults = {
    ami_type = "AL2_x86_64"
  }

  eks_managed_node_groups = {
    one = {
      name = "node-group-1"

      instance_types = ["t3.medium"] // c5.xlarge
      key_name        = "profilehub"

      min_size     = 0
      max_size     = 3
      desired_size = 0
    }

    two = {
      name = "node-group-2"

      instance_types = ["t3.xlarge"]
      key_name        = "profilehub"

      min_size     = 1
      max_size     = 3
      desired_size = 3
    }
  }
}
    

# https://aws.amazon.com/blogs/containers/amazon-ebs-csi-driver-is-now-generally-available-in-amazon-eks-add-ons/ 
data "aws_iam_policy" "ebs_csi_policy" {
  arn = "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy"
}

module "irsa-ebs-csi" {
  source  = "terraform-aws-modules/iam/aws//modules/iam-assumable-role-with-oidc"
  version = "4.7.0"

  create_role                   = true
  role_name                     = "AmazonEKSTFEBSCSIRole-${module.eks.cluster_name}"
  provider_url                  = module.eks.oidc_provider
  role_policy_arns              = [data.aws_iam_policy.ebs_csi_policy.arn]
  oidc_fully_qualified_subjects = ["system:serviceaccount:kube-system:ebs-csi-controller-sa"]
}

resource "aws_eks_addon" "ebs-csi" {
  cluster_name             = module.eks.cluster_name
  addon_name               = "aws-ebs-csi-driver"
  addon_version            = "v1.5.2-eksbuild.1"
  service_account_role_arn = module.irsa-ebs-csi.iam_role_arn
  tags = {
    "eks_addon" = "ebs-csi"
    "terraform" = "true"
  }
}

##############################################################
# Data sources to get VPC, subnets and security group details
##############################################################

# RDS
resource "aws_security_group" "rds_sg" {
  name        = "rds-security-group"
  description = "RDS Security Group"
  vpc_id      = module.vpc.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

#resource "aws_security_group_rule" "allow-workers-nodes-communications" {
#  description              = "Allow worker nodes to communicate with database"
#  from_port                = 5432
#  protocol                 = "tcp"
#  security_group_id        = "${aws_security_group.rds_sg.id}"
#  source_security_group_id = "${module.eks.cluster_security_group_id}"
#  to_port                  = 5432
#  type                     = "ingress"
#}

resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds-subnet-group"
  subnet_ids = module.vpc.private_subnets
}
#
## RDS PostgreSQL
#resource "aws_db_instance" "postgresql" {
#  allocated_storage    = 20
#  engine               = "postgres"
#  engine_version       = "14"
#  instance_class       = "db.t3.micro"
#  username             = "cacao"
#  password             = "cacaocacao"
#  db_name              = "profilehub"
#  db_subnet_group_name = aws_db_subnet_group.rds_subnet_group.name
#  vpc_security_group_ids = [aws_security_group.rds_sg.id]
#
#  tags = {
#    Name = "my-postgresql-db"
#  }
#}

## S3 Bucket
resource "aws_s3_bucket" "my_bucket" {
  bucket = "profilehub-bucket"

  tags = {
    Name        = "My EKS and RDS S3 Bucket"
    Environment = "Production"
  }
}

# Bastion Host
#resource "aws_instance" "public_ec2" {
#  ami           = "ami-0462a914135d20297"
#  instance_type = "t2.micro"
#  subnet_id     = module.vpc.public_subnets[0]
#
#  key_name      = "profilehub"
#
#  vpc_security_group_ids = [
#    aws_security_group.bastion_sg.id,
#  ]
#
#  tags = {
#    Name = "public-ec2"
#  }
#}

resource "aws_security_group" "bastion_sg" {
  name        = "bastion-security-group"
  description = "Bastion Security Group"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# redis
resource "aws_security_group" "redis_sg" {
  name        = "redis-security-group"
  description = "Redis Security Group"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 6379
    to_port     = 6379
    protocol    = "tcp"
    security_groups = [module.eks.node_security_group_id, aws_security_group.bastion_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elasticache_subnet_group" "example" {
  name        = "example-subnet-group"
  description = "Example subnet group for Elasticache"
  subnet_ids  = module.vpc.private_subnets
}

resource "aws_elasticache_parameter_group" "example" {
  name   = "example-parameter-group"
  family = "redis6.x"
}

resource "aws_elasticache_replication_group" "example" {
  description = "Example replication group for Elasticache"
  replication_group_id         = "example-replication-group"
  engine_version               = "6.x"
  node_type                    = "cache.t3.micro"
#  automatic_failover_enabled   = true
  subnet_group_name            = aws_elasticache_subnet_group.example.name
  parameter_group_name         = aws_elasticache_parameter_group.example.name
  security_group_ids           = [aws_security_group.redis_sg.id]
}

output "replication_group_endpoint" {
  value = aws_elasticache_replication_group.example.primary_endpoint_address
}
